Fix avatar on Safari

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -38,6 +38,8 @@
     width: 30px;
     img {
       margin-top: 0;
+      height: 30px;
+      width: auto;
     }
   }
 
